add hover effect over the ping pong button

--- a/css/styles.css
+++ b/css/styles.css
@@ -13,7 +13,12 @@
 }
 .gaming{
   color:#f44336;
+  text-align: center;
 }
 body{
   background-color: wheat;
+}
+.button:hover{
+  cursor: pointer;
+  color:#ccc;
 }
