--- a/css/styles.css
+++ b/css/styles.css
@@ -15,10 +15,13 @@
   color:#f44336;
   text-align: center;
 }
-body{
-  background-color: wheat;
-}
+
 .button:hover{
   cursor: pointer;
   color:#ccc;
 }
+@media screen and (min-width: 480px) {
+  body {
+   background-color: wheat;
+   color: black;
+    }
